--- a/sd_geng/res/layout/fragment_schedule_edit.xml
+++ b/sd_geng/res/layout/fragment_schedule_edit.xml
@@ -191,7 +191,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="15sp"
             android:layout_toLeftOf="@+id/edit_submit"
-			android:background="@drawable/btn_style"
+			android:background="@drawable/btn_style_2"
+			android:textColor="#FFFFFF"
             android:text="取消" />
 
         <android.widget.Button
@@ -200,7 +201,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_margin="15sp"
-			android:background="@drawable/btn_style"
+			android:background="@drawable/btn_style_2"
+			android:textColor="#FFFFFF"
             android:text="提交" />
     </RelativeLayout>
 
